# mlx-transcribe

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: transcripteur.md
src/: check-access.py  pyproject.toml  transcribe-all.py  transcript-by-segment.py  transcript-with-diarization.py  whipser-mp3.py
